NEW IN WAF 1.6.4
----------------

* Improve the support for mac applications (demos/mac_app)
* Fixed the Python detection on win32 #883
* Optimized the Python file installation #892
* Force +x permissions on installed fortran programs #893
* Ensure that unit tests are executed only after the symlinks are created
* Check for tasks creating the same nodes on waf -v
* Fix the precedence constraints for classes ending in _task #896
* New variables conf.env.NO_LOCK_IN_TOP/OUT/RUN for special projects (top='..')
* New example on avoiding rebuilds when moving a project (playground/relocate)
* Compute a build order based on the preprocessor scanning #777
* Build better default regexps in "waf step"

NEW IN WAF 1.6.3
----------------

* Fixed the interaction of Fortran configuration tests and WAFCACHE #842
* Various documentation fixes
* Set the PYTHONARCHDIR variable for installing python extensions
* Fixed the Waf file creation with --zip-type=gz (bunzip2 was not replaced by gzip -d)
* Fixed multiple problems in the call to TaskGen.declare_chain(...) #850
* Fixed the task attribute 'vars' which might cause unnecessary rebuilds #852
* Return the value of post_check(...) in conf.check(...) #857
* Rewrite the boost tool (waflib/extras/boost.py) #814, #454, #424
* More fortran file extensions: .for, .FOR #867
* Searching above the root nodes no longer raise exceptions #868
* Msvc detection fixes for non-utf8 encodings #873
* Fixed the destdir processing on Windows #874
* Stop changing the flags on waf -v (make the errors more visible) #875
* Fixed the resource file compilation on Windows #876
* Fixed the vala file installation #881
* New system of plugins for C/C++/Fortran compilers (files named c_* in waflib/extras/)
* New examples of interaction between Waf and existing makefiles (playground/)
* New names for @before/@after: @before_method/@after_method

NEW IN WAF 1.6.2
----------------

* Support for C# debugging files #797